@@ -29,30 +29,22 @@ DIST NVIDIA-Linux-x86-96.43.23-pkg0.run 11504817 SHA256 51e6adf4ba73071622045fc3
 DIST NVIDIA-Linux-x86_64-173.14.39-pkg2.run 21100833 SHA256 15a953666d5681ba54c97498b578ffd286a1dc96d605f3b02110f3f99813100e SHA512 a65cd496e6ed57f771c3d99f37f616a1242d97844f6faef7a807825ad899c0e536a99fde397020839f0857883b934032f9491024f3047a6b06d3eea1f5d77713 WHIRLPOOL dc5f243b7d1de7e2d1b7f005e018a2940d63335b11a7c83c234b348b7a1839e9131169d2ea928bd8c2f549a4535149b03e16e6c94d59dfa745f7f904ff790a45
 DIST NVIDIA-Linux-x86_64-304.117.run 68548224 SHA256 0e5a751cf12b55057c00ccf53d05c8934d5eee49c5f8b3f33c5e11e2c6989e6e SHA512 24288906ca60bd5c3fd31fe501c6e077e2d67dc1d84165ba30e8d257733e236130a517aeda832f683091a4ec2eeecfb514f064571a5b58389a9042f6be679520 WHIRLPOOL 36881a4611d96f7cb79bf1af3d8918242daa5e21ab578561d5f86f445241429349516e8ce2d31f23f2c3ab6dc9b1b296948c930a5f063d3fc9866ef6de4d80d5
 DIST NVIDIA-Linux-x86_64-319.76.run 48955420 SHA256 0484acfd97d742dfc411dfde9a519839d89596f70dd63b2b4b65a9cb5bf5399e SHA512 a2ef6ab86298d8226368eae4dc0ab2a0a644b24e67e485c0192123105bce04e79ac16ed97f2df5e5e2e6affc078779c411040eba20afd31132d210ea97189f1f WHIRLPOOL f6206e120c112e7811d2ede9a8f8f7bdff1c6438a0d773bcdbea4f612490f37ba169fa573bf0569e7d0936b04ffb0ac97f8e49c02dee66e9a85cea0224ff314a
+DIST NVIDIA-Linux-x86_64-319.82.run 48835303 SHA256 9e00555488fd1c934a86ccf04f3a9eb8c5bcbc29ea38ce66d72788d0bd9dde7b SHA512 c4671ad83c2aa99768165a4ec5aff6d91cc3c6ac3a9c23a9d48ea7cdee03ab365e4d697fb434101f808ac9061365504e94761948d6d7daf66fed9154ed68360b WHIRLPOOL 58e96ec03b5f07350a8d1899d8e44cba6d26e6ff6a361beeda7bc7c98c6cbe7ae2740ff510ee070db3f40c67f31034be99aa3ea3c65ddb76a525d0b8bd7d2dd2
 DIST NVIDIA-Linux-x86_64-331.20.run 60012677 SHA256 b8803906402354d201d3b9bc21938a0fe8a7d76e93e486fddaab340df18092ec SHA512 96c2858fcfca05e68683dbc3c677194d1ad30d179cb88df445f32bc68e98b5964315336154f4a693ef1e385e809adfc3795e19b2337f4c1e93908825ee7792c1 WHIRLPOOL 66386d85ab40dd0a20a81f44e7e45b94d94bf4cebe01eb13467a6d6eed27df758d69559e069d479e888374d695290468fb15ff60159346a00e2bbe726d471866
 DIST NVIDIA-Linux-x86_64-96.43.23-pkg2.run 15962375 SHA256 ce8d8253e7dab7da63fbdac449ebf190cd0c10cbfffea0f8d0165515f851bc64 SHA512 04bec1187a6024a2b9839f008ec829281f1f2602dae2e639030bc385943186506bcaa2b46a230b2ab87f9217190841abc62f9e2d6395ab5559623389c31c6563 WHIRLPOOL 0651c44a51a1a06fcff5bfddbf9c3e408977e03263c7fe806cb6c01f9fe92f716dfe4e5190ffe1048bde72fcffdc8bca8267e74dd43ba5c9dfb22b6201fcc2bb
 EBUILD nvidia-drivers-173.14.39.ebuild 16615 SHA256 df85299032940da5c09757185accdfdfc65c9beaa6e07a5ab7224122cbf62521 SHA512 c939a4d4f8e945ef5f90a7842e7110eb18ea5df1b1c9ff08e703b7d744206e0fa49e833f5780cb3f3435652f5e3b5743c74d0d44b7804caab6364236cd5ae6d2 WHIRLPOOL 8df9736aa00dbe6e2f75cb7994e9cfbef635d8c7c451a3d4248929e0b73bd8e73d1b316a5971757b56b1aa40ae3794b093a3adbd7eb840c568410406d9e85c6d
 EBUILD nvidia-drivers-304.117.ebuild 12594 SHA256 7d4ccb38761ae9ca4ac6875616547f6953c3f1cc11f48c969679ff4d005ff5b0 SHA512 b4148b9d611bdb6d6ef8dbf1989f44a526b9bbb4e2cb8ec8b4dc10bcb35a44ffea3ffdf235e5321a7dcd16cb7eb072350ac33a8c61445d5095abae360cee4dba WHIRLPOOL 7ccd6ff398790a4209b7b29adb98e7fe353d9fcdd4f2f7fd3b499cacaeec61fd2279ec6b6f06bf7a639fca115ee4aff50443e8ef95aacac6883284758acf670a
 EBUILD nvidia-drivers-319.76.ebuild 12201 SHA256 43b77e20fe81733878209b8d8244d9a883b9d9c0fe3dc84786cf04a06e842ae6 SHA512 af232e40e385a4d779fdb2784b274f5b55cb367d80eba06ff428529c5a3003ed03231e8b6c135cf1712787e921132e9e8c4f085cd7af1cd6b039782ea0b74903 WHIRLPOOL defc756eaa6061d40c0ec1cd8694bd0f43707e0e7d7d189b8cc9117c0f2148c655a967818b533dcad159e3323ad5e614c2e49a71571653199e4b241bccdadbfd
+EBUILD nvidia-drivers-319.82.ebuild 12181 SHA256 89ff2b9459ade5ca6ab14f60f5549dd409a259c6b86ed6261ebd6a13ed68f829 SHA512 544b60b46028a3431bc5e5906ad649f19a25c3a05967e391433dc46b11c3c95c3d26f4ca7f65c6f953179bf536ba0a392243f6d1ce6af6e94c0d628c41dc3255 WHIRLPOOL 91e53ae1c9e8038890304591108c80e59f3ec59b2f78df4639b309bab1549a75f8ca8dd6fb4baaad042bbddfd6500ffc78ff4ba95cf706c2ff56fc12da8f6475
 EBUILD nvidia-drivers-331.20.ebuild 12282 SHA256 28958e1faff6850d74e7131df5ffbc820010a16fe815795bb9387a50bf7c79c5 SHA512 482944da5192e199bd98c72716e52c882147d79862b151166e5de15200b794578762118ace9d4d102def7f1aa6964e48281bd8efcb0470ebd2ccfbd4930d3e2b WHIRLPOOL 31148bb67660273f672353bc417cc9b34cbdccb0cba6a814cb477390bfd285a7677256206cb3d6d791f07479499dfe11457cc860d539a650a36f317d84020cf6
 EBUILD nvidia-drivers-96.43.23.ebuild 14882 SHA256 f113d8f0155e54f35ba9ae96e9190c9c0c008f53422bc4e4b07d20ac25efa917 SHA512 6fce1ad80cacf25c9c28638255c304c6218d91f13c7b5f3741cf0a10636aa449fb6241ddce211b8be92005a719f6d1e8cb28315a9900c4774c6420e3fbd5eecd WHIRLPOOL b87d4b6618b0cd355c5f9884eea353c1f0741b71b3b4cbb5e5ad985d1121db44fc2e77bffa361e82d7ab761eefe4b78c40498aa987a7ce5927a80bd868c4d53d
-MISC ChangeLog 462 SHA256 a0ef2fe4953e9fdf32e4273cfe821795013df21d2aaadcff0dccbced0a6c125e SHA512 fc5bc7997ffa1e51232f33a7e7ef59225ef20878811022d1bf44b8be9edc85c2d97412334aeca38b2def59c91d055ce5fb9412b08cafd5117879714f0a39dd01 WHIRLPOOL 1c0e59d8fe8015458d23418282b39fdc1392eb210b962ece625b5be23e7d10c296039f5a84d769aed2f62f0224fa277024f4540ef35ddc102ce16ee0e33457ec
+MISC ChangeLog 589 SHA256 dd76bcde41d54a90c81a6a2fcaa1e88216f49ccf884d9cb45c85119008af22b3 SHA512 20181b556e9d5e0e521f82ec532e0834d9023598beb304f311e247cd711eb44f16adf066186ddf0528e4006216cd36b5df34f3e2530f9e928d2cbc672e96a83d WHIRLPOOL e8da518747b86ce167fd4187f1a72ece48b2e5646fda7bf53cd34a45a7aec35f33fb997023d3fa3b88fe108444c4771d21ec358c77422cf8ccea0d3ba9e53d93
 MISC ChangeLog-2013 103100 SHA256 e8474a573b3e0082e71ed55094cb9298a631b76f415210e573b6db8b9a9fe6ce SHA512 706f2be5243cfe7ea2a850f8d3555d7d83d06c1341b8a8deb3ec9776970ed78fbcb2e99612dbb8205e4f553fcc564c187309d1b9013aecddbdc0cb9dc29cdb00 WHIRLPOOL ca71c3c53156cd722c6cdc2117358cdbb6cba8209bda6b3cbc59e4e84fbd9c4e278f108c06e80057a5af1a40993f24eb9cba542dd5e9518506f9ae6766fa56ba
 MISC metadata.xml 678 SHA256 02f45452a129ba14ad5ef0f6bf0031887aead328a7bfaa6977949bc6e8969e61 SHA512 dfc9494e01db7ee3e7ef64dc67c5e26b1a3b0c90ed2850f75c904a76a11df8b3cb137959fe471c788b7a33f555090a9c764af5cfff7f24253127484d4e518e84 WHIRLPOOL 2940677faa8b8183237d9797025079a68164584d2afd09b6e3846cdbbd5824f3c56da545b2f7d1c7d1e72746f540048e4256bde939a28ac785fa598ee2017abd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSxGL8AAoJEJS/30SErRQvFlkP/jdifQCyXkXKI9GESThL9945
-DCZkJJK396xILIrCfQExq0Azmbr1NJmQ6i1hiU7xHMM6g7Obc6tDfKQu/3614ujI
-fc+N/rRGRzM4P/GyI1GEfPnSdi/U7Y1ddEVF/N5NGfSKSTQ+jUl1NTqR7ZobP5hJ
-6YO5eY12Dna2fQLSmMqBCq4SdgrYhcqkPkfXxZnQopbwYaPeTsCvtQMFYwGZCbc/
-GNEBwVK16VDUlz2a1GSIAHBUsskKKHGLxBwRbX41sMkoOywNC9XFZ33S4EY+EzcG
-bjXHRKGghS32JOU63X1InngWLjmJPF7t6HbMqx/xcEJcVGUAEq76nDBJI7f7UkZu
-fX3/H0VKcgTMdF2XgnMrxeHwQakA28IrHq4QqhHWJVA1Dp5mR+ob50NVaUW7Ml7c
-Mp9ncPC1r/zBlzBEdyQMqlG7lLnC4vFS2v7DR/bLnhE6keEnJ5ciyyX8tHWi1IBi
-YRoEpvq4UOE0KbkDLCVyfrpP6Xm8m+xU3nQOKT0nuMos9iG22SWT4C94AtTiwQOh
-yPDvWeFvhyZcV0YqiFokEbDHPmELxSPbMKBnMkOCbnOyzJTHk5ngs6C0IU2LKawY
-NkxGsz2fAsPsizvQRBE3eRvucp3PVXZG78BCwBOgUTyG/nGx7nK/1c7af+efnX+k
-OFdi+3aPVf+ruMHW2+2K
-=HcMC
+iEYEAREIAAYFAlLP/zsACgkQVWmRsqeSphOM2gCfUZH46bXH/QRHFj9ZBfpQu85j
+3Q0Anjjuzr4OnHWjktAlWoMx0BNW29KV
+=SkK0
 -----END PGP SIGNATURE-----
